--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bevy = {version = "0.10.1", features = ["dynamic_linking"]}
 rand = "0.8.5"
 bevy_rapier2d = { version = "0.21.0", features = [ "simd-stable", "debug-render-2d" ] }
+rapier2d = "0.17.2"
 
 [profile.dev]
 opt-level = 1
